# opensubdiv-petite

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE-CONTINUE.md  CLAUDE.md  Cargo.toml  README.md  SOLUTION_SUMMARY.md  SUMMARY.md  creased_cube_bfr.step  creased_cube_bfr_mixed.step  creased_cube_stitched.step  creased_cube_superpatch.step  cube_gap_filled.step  cube_regular.step  fix_build_env.sh  infinite_cube_10.step  infinite_cube_100.step  infinite_cube_11.step  justfile  test_cube_export.rs
.memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
opensubdiv/: Cargo.toml
opensubdiv-petite/: Cargo.toml  README.md
opensubdiv-petite-sys/: Cargo.toml  README.md  build.rs  patch_wrapper.hpp  wrapper.hpp
opensubdiv-petite-sys/c-api/bfr/: surface_factory.cpp
opensubdiv-petite-sys/c-api/far/: limit_stencil_table.cpp  patch_evaluator.cpp  patch_table.cpp  primvar_refiner.cpp  stencil_table.cpp  stencil_table_factory.cpp  topology_level.cpp  topology_refiner.cpp  topology_refiner_factory.cpp
opensubdiv-petite-sys/c-api/osd/: cpu_vertex_buffer.cpp  cuda_evaluator.cpp  cuda_vertex_buffer.cpp  metal_evaluator.cpp  metal_vertex_buffer.cpp  omp_evaluator.cpp  opencl_evaluator.cpp  opencl_vertex_buffer.cpp  tbb_evaluator.cpp
opensubdiv-petite-sys/src/: bindings.rs  lib.rs  sdc.rs
opensubdiv-petite-sys/src/bfr/: mod.rs  surface_factory.rs
opensubdiv-petite-sys/src/far/: limit_stencil_table.rs  mod.rs  patch_table.rs  primvar_refiner.rs  stencil_table.rs  topology_level.rs  topology_refiner.rs
opensubdiv-petite-sys/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cpu_vertex_buffer.rs  cuda_evaluator.rs  cuda_vertex_buffer.rs  metal_evaluator.rs  metal_vertex_buffer.rs  mod.rs  omp_evaluator.rs  opencl_evaluator.rs  opencl_vertex_buffer.rs  tbb_evaluator.rs
opensubdiv-petite-sys/src/vtr/: types.rs
opensubdiv-petite/examples/: bevy.rs  chamfered_tetrahedron.rs  creased_cube_export.rs  cube_export.rs  debug_segfault.rs  extraordinary_vertices.rs  far_tutorial_0.rs  gpu_lifetime_safety.rs  infinite_crease_cube.rs  iterators.rs  monstertruck_integration_example.rs  osd_tutorial_0.rs  osd_tutorial_0_cuda.rs  osd_tutorial_0_metal.rs  osd_tutorial_0_opencl.rs  patch_table_example.rs  patch_table_local_points.rs  test_cube_export.rs  test_extraordinary_vertices.rs  test_iterators.rs  truck_integration_example.rs
opensubdiv-petite/examples/creased_cube_to_step/: Cargo.toml  README.md
opensubdiv-petite/examples/creased_cube_to_step/src/: main.rs
opensubdiv-petite/shaders/wgsl/: stencil_eval.wgsl
opensubdiv-petite/src/: bfr.rs  error.rs  iges_export.rs  lib.rs  monstertruck.rs  obj_bspline_export.rs  tri_mesh_buffers.rs  truck.rs  truck_integration.rs
opensubdiv-petite/src/far/: limit_stencil_table.rs  mod.rs  patch_table.rs  primvar_refiner.rs  stencil_table.rs  topology_descriptor.rs  topology_level.rs  topology_refiner.rs
opensubdiv-petite/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cpu_vertex_buffer.rs  cuda_evaluator.rs  cuda_vertex_buffer.rs  metal_evaluator.rs  metal_vertex_buffer.rs  mod.rs  omp_evaluator.rs  opencl_evaluator.rs  opencl_vertex_buffer.rs  tbb_evaluator.rs  wgpu.rs
opensubdiv-petite/tests/: boundary_fix.rs  complex_polyhedron_monstertruck.rs  complex_polyhedron_truck.rs  cube_export.rs  export_patch_cages.rs  far.rs  gregory_patches.rs  iges_export.rs  index.rs  limit_stencil.rs  metal_evaluation.rs  monstertruck.rs  monstertruck_cv_ordering.rs  monstertruck_disconnected.rs  monstertruck_matrix_test.rs  monstertruck_surfaces_only.rs  monstertruck_two_patches.rs  obj_bspline_export.rs  obj_export.rs  opencl_evaluation.rs  osd.rs  safe_gpu_api.rs  safe_gpu_api_test.rs  single_patch_export.rs  test_boundary_fix.rs  test_utils.rs  truck.rs  truck_cv_ordering.rs  truck_disconnected.rs  truck_matrix_test.rs  truck_surfaces_only.rs  truck_two_patches.rs  utils.rs  wgpu_stencil.rs
opensubdiv-petite/tests/expected_results/: complex_polyhedron_crease4.step  creased_cube.igs  creased_cube.step  creased_cube_direct_nurbs.step  metal_stencil_evaluation.txt  opencl_stencil_evaluation.txt  simple_cube.igs  simple_cube.step  simple_cube_gregory.step  simple_cube_nurbs.step  simple_cube_single_patch.step  simple_plane.igs  simple_plane.step  two_patches.igs  two_patches_surfaces_only.step
opensubdiv-sys/: Cargo.toml  build.rs  wrapper.hpp
opensubdiv-sys/osd-capi/: CMakeLists.txt
opensubdiv-sys/osd-capi/far/: primvar_refiner.cpp  stencil_table_factory.cpp  topology_level.cpp  topology_refiner.cpp
opensubdiv-sys/src/: lib.rs  sdc.rs
opensubdiv-sys/src/far/: mod.rs  primvar_refiner.rs  stencil_table.rs  stencil_table_factory.rs  topology_level.rs  topology_refiner.rs  topology_refiner_factory.rs
opensubdiv-sys/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cuda_vertex_buffer.rs  mod.rs
opensubdiv-sys/src/sdc/: mod.rs  options.rs  types.rs
opensubdiv-sys/src/vtr/: types.rs
opensubdiv/examples/: far_tutorial_0.rs  osd_tutorial_0.rs  osd_tutorial_0_cuda.rs
opensubdiv/src/: lib.rs
opensubdiv/src/far/: mod.rs  primvar_refiner.rs  stencil_table.rs  stencil_table_factory.rs  topology_descriptor.rs  topology_level.rs  topology_refiner.rs
opensubdiv/src/osd/: buffer_descriptor.rs  cpu_evaluator.rs  cpu_vertex_buffer.rs  cuda_evaluator.rs  cuda_vertex_buffer.rs
opensubdiv/src/sdc/: mod.rs
