[package]
name = "opensubdiv-petite-sys"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2018"
keywords = ["graphics", "rendering", "3d", "subdivision-surface", "polygon-mesh"]
categories = ["graphics", "rendering::graphics-api", "api-bindings"]
license = "Apache-2.0"
description = "Low-level wrapper around parts of Pixar’s OpenSubdiv"
readme = "README.md"
homepage = "https://graphics.pixar.com/opensubdiv/"
documentation = "https://docs.rs/opensubdiv-petite-sys/"
repository = "https://github.com/virtualritz/opensubdiv-petite/"
exclude = [
    "OpenSubdiv/*.pdf",
    "OpenSubdiv/*.yml",
    "OpenSubdiv/documentation/**/*",
    "OpenSubdiv/examples/**/*",
    "OpenSubdiv/regression/far_perf/**/*",
    "OpenSubdiv/regression/far_regression/**/*",
    "OpenSubdiv/regression/hbr_regression/**/*",
    "OpenSubdiv/regression/osd_regression/**/*",
    "OpenSubdiv/regression/shapes/**/*",
    "OpenSubdiv/tutorials/**/*",
]

[features]
clew = []
cuda = []
metal = []
omp = []
opencl = []
openmp = []
ptex = []

[dependencies]
bitfield = "0.13.2"
derive_more = "0.99.13"
num_enum = "0.5.1"

[build-dependencies]
cc = { version = "1.0.67", features = ["parallel"] }
cmake = "0.1.45"
bindgen = "0.58.1"

[target.'cfg(windows)'.build-dependencies]
regex = "1"
