[package]
name = "opensubdiv-petite-sys"
version = "0.3.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "subdivision-surface", "polygon-mesh"]
categories = ["graphics", "rendering::graphics-api", "api-bindings"]
license = "Apache-2.0"
description = "Low-level wrapper around parts of Pixar’s OpenSubdiv"
readme = "README.md"
homepage = "https://graphics.pixar.com/opensubdiv/"
documentation = "https://docs.rs/opensubdiv-petite-sys/"
repository = "https://github.com/virtualritz/opensubdiv-petite/"
exclude = [
    "OpenSubdiv/*.pdf",
    "OpenSubdiv/*.yml",
    "OpenSubdiv/documentation/**/*",
    "OpenSubdiv/examples/**/*",
    "OpenSubdiv/regression/far_perf/**/*",
    "OpenSubdiv/regression/far_regression/**/*",
    "OpenSubdiv/regression/hbr_regression/**/*",
    "OpenSubdiv/regression/osd_regression/**/*",
    "OpenSubdiv/regression/shapes/**/*",
    "OpenSubdiv/tutorials/**/*",
]

[features]
clew = []
cuda = []
metal = []
omp = []
opencl = []
openmp = []
ptex = []

[dependencies]
derive_more = { version = "2", features = ["full"] }
num_enum = "0.7"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
cmake = "0.1"
bindgen = "0.72"

[lib]
doctest = false
