[package]
name = "opensubdiv-petite"
version = "0.3.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "subdivision-surface", "polygon-mesh"]
categories = ["graphics", "rendering::graphics-api", "api-bindings"]
license = "Apache-2.0"
description = "Wrapper around parts of Pixar’s OpenSubdiv"
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
homepage = "https://graphics.pixar.com/opensubdiv/"
documentation = "https://docs.rs/opensubdiv-petite/"
repository = "https://github.com/virtualritz/opensubdiv-petite/"

[features]
default = ["topology_validation"]
clew = ["opensubdiv-petite-sys/clew"]
cuda = ["opensubdiv-petite-sys/cuda"]
metal = ["opensubdiv-petite-sys/metal"]
omp = ["opensubdiv-petite-sys/omp"]
opencl = ["opensubdiv-petite-sys/opencl"]
openmp = ["opensubdiv-petite-sys/openmp"]
ptex = ["opensubdiv-petite-sys/ptex"]
tri_mesh_buffers = ["itertools", "ultraviolet", "slice-of-array"]
topology_validation = []
truck_integration = ["truck-geometry", "truck-modeling"]

[dependencies]
derive_more = { version = "2", features = ["full"] }
opensubdiv-petite-sys = { version = "0.3.0", path = "../opensubdiv-petite-sys" }
num_enum = "0.7"
itertools = { version = "0.14", optional = true }
ultraviolet = { version = "0.10", optional = true }
slice-of-array = { version = "0.3", optional = true }
truck-geometry = { version = "0.5", optional = true }
truck-modeling = { version = "0.6", optional = true }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_pbr", "bevy_winit"] }
smooth-bevy-cameras = "0.14"
truck-stepio = "0.3"
anyhow = "1.0"
glam = "0.29"

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.16"
features = ["x11", "wayland"]
default-features = false

[[example]]
path = "examples/osd_tutorial_0_cuda.rs"
name = "osd_tutorial_0_cuda"
required-features = [ "cuda" ]

[[example]]
path = "examples/bevy.rs"
name = "bevy"
required-features = [ "tri_mesh_buffers" ]

[[example]]
path = "examples/patch_table_example.rs"
name = "patch_table_example"

[[example]]
path = "examples/truck_integration_example.rs"
name = "truck_integration_example"
required-features = ["truck_integration"]

[[example]]
path = "examples/creased_cube_to_step/src/main.rs"
name = "creased_cube_to_step"
required-features = ["truck_integration"]

[package.metadata.docs.rs]
features = ["tri_mesh_buffers", "topology_validation"]
