[package]
name = "opensubdiv-petite"
version = "0.3.1"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
keywords = ["graphics", "rendering", "3d", "subdivision-surface", "polygon-mesh"]
categories = ["graphics", "rendering::graphics-api", "api-bindings"]
license = "Apache-2.0"
description = "Wrapper around parts of Pixar’s OpenSubdiv"
exclude = [".github/**/*", "crates/**/*"]
readme = "README.md"
homepage = "https://graphics.pixar.com/opensubdiv/"
documentation = "https://docs.rs/opensubdiv-petite/"
repository = "https://github.com/virtualritz/opensubdiv-petite/"

[features]
default = ["topology_validation"]

## Integration with Bevy game engine.
bevy = ["dep:bevy", "dep:smooth-bevy-cameras", "tri_mesh_buffers"]

## Use CLEW for OpenCL runtime loading.
clew = ["opensubdiv-petite-sys/clew"]

## Enable CUDA GPU backend for NVIDIA GPUs.
cuda = ["opensubdiv-petite-sys/cuda"]

## Enable Metal GPU backend for Apple devices.
metal = ["opensubdiv-petite-sys/metal"]

## Enable OpenMP for CPU parallelization.
omp = ["opensubdiv-petite-sys/omp"]

## Enable OpenCL GPU backend for cross-platform GPU support.
opencl = ["opensubdiv-petite-sys/opencl"]

## Enable OpenMP for CPU parallelization (alias).
openmp = ["opensubdiv-petite-sys/openmp"]

## Enable PTex texture support.
ptex = ["opensubdiv-petite-sys/ptex"]

## Enable parallel processing with `rayon`.
rayon = ["dep:rayon"]

## Enable triangle mesh buffer generation.
tri_mesh_buffers = ["itertools", "ultraviolet", "slice-of-array"]

## Enable topology validation for debugging (enabled by default).
topology_validation = []

## Enable WGSL compute path (wgpu).
wgpu = ["dep:wgpu"]

## Enable `truck` CAD kernel integration for B-rep export.
truck = ["truck-geometry", "truck-modeling"]

## Export boundary curves when using `truck` integration.
truck_export_boundary = ["truck"]

## Use B-spline basis end caps instead of Gregory patches (legacy behavior).
b_spline_end_caps = []

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
document-features = "0.2"
opensubdiv-petite-sys = { version = "0.3.0", path = "../opensubdiv-petite-sys" }
num_enum = "0.7"
thiserror = "2"
rayon = { version = "1", optional = true }
itertools = { version = "0.14", optional = true }
ultraviolet = { version = "0.10", optional = true }
slice-of-array = { version = "0.3", optional = true }
truck-geometry = { git = "https://github.com/ricosjp/truck.git", package = "truck-geometry", optional = true }
truck-modeling = { git = "https://github.com/ricosjp/truck.git", package = "truck-modeling", optional = true }
bevy = { version = "0.16", optional = true, default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_pbr", "bevy_winit"] }
smooth-bevy-cameras = { version = "0.14", optional = true }
wgpu = { version = "28", optional = true }

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.16"
optional = true
features = ["x11", "wayland"]
default-features = false

[dev-dependencies]
truck-stepio = { git = "https://github.com/ricosjp/truck.git", package = "truck-stepio" }
anyhow = "1.0"
glam = "0.30"
pollster = "0.3"

[[example]]
path = "examples/osd_tutorial_0_cuda.rs"
name = "osd_tutorial_0_cuda"
required-features = [ "cuda" ]

[[example]]
path = "examples/bevy.rs"
name = "bevy"
required-features = [ "tri_mesh_buffers", "bevy" ]

[[example]]
path = "examples/patch_table_example.rs"
name = "patch_table_example"

[[example]]
path = "examples/truck_integration_example.rs"
name = "truck_integration_example"
required-features = ["truck"]

[package.metadata.docs.rs]
features = ["tri_mesh_buffers", "topology_validation"]
