[package]
name = "opensubdiv-sys"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2018"

[features]
clew = []
cuda = []
metal = []
omp = []
opencl = []
ptex = []

[dependencies]
bitfield = "0.13.2"
derive_more = "0.99.13"

[build-dependencies]
cmake = "0.1.45"
bindgen = "0.58.0"
